[package]
name = "hng14_stage0"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
author = "devLateef"

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.7"
serde_json = "1.0"